--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,1 @@
-
-# Created by https://www.gitignore.io/api/web
-# Edit at https://www.gitignore.io/?templates=web
-
-### Web ###
-*.asp
-*.cer
-*.csr
-*.css
-*.htm
-*.html
-*.js
-*.jsp
-*.php
-*.rss
-*.xhtml
-
-# End of https://www.gitignore.io/api/web
+index.html
